force-app/main/default/objects/Q_A_Item__c/Q_A_Item__c.object-meta.xml
<CustomObject>
    <label>Q/A Item</label>
    <nameField>
        <label>Q/A Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Q/A Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>