force-app/main/default/objects/Q_A_Item__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>