force-app/main/default/objects/Q_A_Item__c/fields/Q_A_Type__c.field-meta.xml
<CustomField>
    <fullName>Q_A_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Q/A Type</label>
    <referenceTo>Q_A_Type__c</referenceTo>
    <relationshipLabel>Q/A Items</relationshipLabel>
    <relationshipName>Q_A_Items</relationshipName>
    <type>Lookup</type>
</CustomField>